# cmdd

./: .gitignore  CMakeLists.txt  README.md  config.cmake  configure
.cmake/: CustomUtils.cmake
configs/: cmdd.service.in  handler.sh.in
configs/conf.d/offline.d/: 00-info
configs/conf.d/online.d/: 50-msmtpq-flush
configs/conf.d/scripts/: info  msmtpq-flush
documents/: README.md
examples/: timezone-update
sources/: CMakeLists.txt  config.hpp.in
sources/src/: cmdd.cpp
